# file-splitter-example-cpp

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  binarysplittercore.cpp  binarysplittercore.h  cliinterface.cpp  cliinterface.h  config.json  main.cpp  main.qml  mainwindow.cpp  mainwindow.h
